--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,20 @@
     <packaging>pom</packaging>
     <name>Mage Root</name>
     <description>Mage Root POM</description>
+
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub jc776 Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/jc776/mage</url>
+        </repository>
+    </distributionManagement>
+    <scm>
+        <url>https://github.com/jc776/mage</url>
+        <connection>scm:git:https://github.com/jc776/mage.git</connection>
+        <developerConnection>scm:git:https://github.com/jc776/mage.git</developerConnection>
+    </scm>
+
     <build>
         <plugins>
             <plugin>
